<resources>
    <string name="app_name">JCCV_1</string>
    <string name="botonConsumo">&lt;  Consumo</string>
    <string name="textFacturas">Facturas</string>
    <string name="fecha">31 agosto</string>
    <string name="estado">Pendiente de pago</string>
    <string name="importe">5647</string>
    <string name="Filtrar">Filtrar facturas</string>
    <string name="Porfecha">Con fecha de emisión</string>
    <string name="Porimporte">Por un importe</string>
    <string name="Porestado">Por estado</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="Pagadas">Pagadas</string>
    <string name="Anuladas">Anuladas</string>
    <string name="CuotaFija">Cuota Fija</string>
    <string name="PendientesDePago">Pendientes de pago</string>
    <string name="PlanDePago">Plan de pago</string>
    <string name="SmartSolar">Smart Solar</string>
    <string name="Atras">&lt; Atras</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Practicas">Prácticas Android JCCV</string>
    <string name="Practica1">Práctica 1</string>
    <string name="Practica2">Práctica 2</string>
    <string name="first_fragment">Mi instalación</string>
    <string name="second_fragment">Energía</string>
    <string name="third_fragment">Detalles</string>
    <string name="textoprimertab">Aqui tienes los datos de tu instalación fotovoltaica en tiempo real.</string>
    <string name="textesegundotab">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu produccion solar. Sentimos las molestias.</string>
    <string name="CAU">CAU(Código AutoConsumo)</string>
    <string name="EstadoSolicitud">Estado solicitud alta autoconsumidor</string>
    <string name="TipoAutoconsumo">Tipo Autoconsumo</string>
    <string name="CompensacionExcedentes">Compensación de excedentes</string>
    <string name="PotenciaInstalacion">Potencia de instalación</string>
    <string name="tituloPOPUP">Estado solicitud autoconsumo</string>
    <string name="contenidoPOPUP">El tiempo estimado de activación de tu autoconsumo es de 1 a 2 meses, éste variará en función de tu comunidad autónoma y distribuidora.</string>
    <string name="textoBonotesFecha">día/mes/año</string>
    <string name="euro">%1$s €</string>
    <string name="diamesyaño">día/mes/año</string>
    <string name="olvidado"><u>He olvidado mis datos</u></string>
    <string name="tambien">También puedes</string>
    <string name="recordar">Recordar contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="logotipo">Logotipo</string>
    <string name="correo">Correo</string>
    <string name="volver">Volver a login</string>
    <string name="registro">Registro de usuario</string>
    <string name="enviar">Enviar</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="introduzca">Introduzca su email</string>
    <string name="retromock">Retromock Activo</string>
    <string name="retrofit">Retrofit Activo</string>



</resources>