<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Porestado"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chPlan2"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:text="@string/PlanDePago"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="359dp" />

    <CheckBox
        android:id="@+id/chPagada2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pagadas"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="72dp" />

    <CheckBox
        android:id="@+id/chAnulada2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Anuladas"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="145dp" />

    <CheckBox
        android:id="@+id/chPendientes2"
        android:layout_width="187dp"
        android:layout_height="45dp"
        android:text="@string/PendientesDePago"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="292dp" />

    <CheckBox
        android:id="@+id/chCuotaFija2"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:text="@string/CuotaFija"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="219dp" />

</androidx.constraintlayout.widget.ConstraintLayout>