<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/date_picker_button11"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#CAC0C0"
        android:onClick="showDatePickerDialog"
        android:text="día/mes/año"
        android:textAllCaps="false"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/date_picker_button12"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#CAC0C0"
        android:onClick="showDatePickerDialog"
        android:text="día/mes/año"
        android:textAllCaps="false"
        android:textColor="#0C0C0C"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_picker_button11"
        app:layout_constraintEnd_toStartOf="@+id/date_picker_button11"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desde"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="133dp"
        android:text="@string/hasta"
        app:layout_constraintEnd_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="59dp"
        android:text="@string/Porfecha"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="329dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/Filtrar"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="198dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>