<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#F8F2F2"
        android:text="@string/Practica2"
        android:textAlignment="viewStart"
        android:textColor="#070707"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="@string/Practicas"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="#F8F2F2"
        android:text="@string/Practica1"
        android:textAlignment="viewStart"
        android:textColor="#070707"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        tools:layout_editor_absoluteX="42dp" />
</androidx.constraintlayout.widget.ConstraintLayout>